<resources>

    <string name="app_name">ももクロ電話</string>
    <string name="desc">スプラッシュ画面</string>
    <string name="menu_settings">Settings</string>
    <string name="caller">話し相手を探す</string>
    <string name="receiver">相談されたい</string>
    <string name="member_name_title">あなたは</string>
    <string name="point_title">推しメン ランキング</string>
    <string name="point_1">1位</string>
    <string name="point_2">2位</string>
    <string name="point_3">3位</string>
    
    <string-array name="member_name">
        <item >箱推し</item>
        <item >かなこ推し</item>
        <item >しおりん推し</item>
        <item >あーりん推し</item>
        <item >ももか推し</item>
        <item >れにちゃん推し</item>
    </string-array>
    
</resources>